--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
 font-family: 'Roboto', sans-serif;
 	padding-top: 80px;
+	font-size: 16px;
 }
 
 
@@ -42,7 +43,9 @@ font-family: 'Roboto', sans-serif;
 	margin-bottom: 9px;
 }
 .navbar-nav > li > a.btn:focus,
-.navbar-nav > li > a.btn:hover {
+.navbar-nav > li > a.btn:hover,
+.btn-primary:hover,
+.btn-primary:focus {
 	background-color: rgba(200, 30, 28,0.8);
 	border-color: rgba(200, 30, 28,0.8);
 }
@@ -51,14 +54,13 @@ font-family: 'Roboto', sans-serif;
 	background: #fff;
 }
 /*Button*/
+.btn {
+	padding: 5px 20px;
+}
 .btn-primary {
 	background-color: #c81e1c;
 	color: #fff;
 	border-color: #c81e1c;
-}
-
-.btn-primary:hover {
-	
 }
 
 
@@ -73,7 +75,85 @@ a {
 .b-r {
 	border-right: 1px solid rgba(40,40,40,.30);
 }
+.m-b-15 {
+	margin-bottom: 15px !important;
+}
 
+/*hero*/
+.bg-1 {
+	background-image: url(../img/bg-1.jpg);
+	background-position: left top;
+	background-repeat: no-repeat;
+	background-size: cover;
+	padding-top: 50px;
+	padding-bottom: 50px;
+}
+.intro-box {
+background-color: rgba(255, 255, 255,0.8);
+		text-align: center;
+padding: 15px;
+	margin-bottom: 30px;
+}
+.intro-box h2 {
+	font-weight: 400;
+	text-transform: uppercase;
+	color: #ca1d20;
+	margin-bottom: 20px;
+}
+.form {
+	max-width: 300px;
+	background-color: #fff;
+	border-radius: 10px;
+	padding: 30px;
+	margin-left: auto;
+	margin-right: auto;
+}
+.form .form-group label {
+	color: #999999;
+	font-weight: 300;
+		text-transform:capitalize;
+	font-size: 0.7em;
+	margin: 0px !important;
+}
+.form-control {
+	border-radius: 0px !important;
+	height: 25px;
+}
+.form-group {
+	margin-bottom: 5px;
+}
+
+@media (min-width: 768px) {
+	.intro-box {
+		background-color: rgba(255, 255, 255,0.6);
+		height: 400px;
+		width: 400px;
+		border-radius: 50%;
+		padding: 90px 40px 40px 40px;
+		position: relative;
+		margin-left: auto;
+	}
+	.intro-box:before {
+		content: "";
+		position: absolute;
+		 top: -15px;
+  left: -15px;
+  right: -15px;
+  bottom: -15px;
+		border-radius: 50%;
+		border: 1px dashed gray;
+	}
+	.intro-box p {
+		max-width: 300px;
+		text-align: center;
+		word-spacing: 3px;
+		font-size: 0.9em;
+	}
+	.bg-1 {
+			padding-top: 100px;
+	padding-bottom: 100px;
+	}
+}
 @media (max-width: 767px) {
 	.nav-contact img  {
 		margin-left: 0px !important;
@@ -119,9 +199,7 @@ a {
 	.nav-contact img {
 		margin-left: 15px;
 	}
+	.intro-box {
+margin-right: auto;
+		}
 }
-/*
-@media (min-width: 992px)
-.navbar-toggle {
-    display: none;
-}*/
