--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,20 @@ a {
 .m-b-15 {
 	margin-bottom: 15px !important;
 }
-
+p{
+	color: #666666;
+}
+.uppercase {
+	text-transform: uppercase;
+}
+.semi-bold {
+	font-weight: 400 !important;
+}
+.content-box {
+	max-width: 800px;
+	margin-left: auto;
+	margin-right: auto;
+}
 /*hero*/
 .bg-1 {
 	background-image: url(../img/bg-1.jpg);
@@ -101,7 +114,6 @@ padding: 15px;
 	margin-bottom: 20px;
 }
 .form {
-	max-width: 300px;
 	background-color: #fff;
 	border-radius: 10px;
 	padding: 30px;
@@ -121,6 +133,39 @@ padding: 15px;
 }
 .form-group {
 	margin-bottom: 5px;
+}
+.title {
+	color: #1a1617;
+	text-transform: uppercase;
+	position: relative;
+	margin-bottom: 50px;
+}
+
+.title:before,
+.title:after {
+	content: "";
+	position: absolute;
+	width:40px;
+	height: 2px;
+	bottom: 0;
+	left:50%;
+		margin-bottom: -15px;
+}
+.title:before {
+	background-color: #1a1617;
+	margin-left: -40px;
+}
+.title:after {
+	background-color: #d41d1e;
+}
+/* About US*/
+.content {
+	padding-top: 50px;
+	padding-bottom: 50px;
+}
+.about-us p {
+	font-weight: 300;
+	margin-bottom: 40px;
 }
 
 @media (min-width: 768px) {
@@ -153,6 +198,16 @@ padding: 15px;
 			padding-top: 100px;
 	padding-bottom: 100px;
 	}
+	.content {
+		padding-top: 80px;
+	padding-bottom: 80px;
+	}
+	.form {
+		max-width: 300px;
+	}
+	.about-us .l-h-35{
+	line-height: 35px;
+}
 }
 @media (max-width: 767px) {
 	.nav-contact img  {
