--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,39 @@ padding: 15px;
 	margin-bottom: 40px;
 }
 
+
+/* visa service */
+.visa-service {
+	background-color: #ebeeef;
+}
+.visa-service .title {
+	margin-bottom: 90px;
+}
+.visa-service p { 
+font-size: 0.8em;
+	max-width: 280px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 50px;
+}
+.visa-service .circle {
+height: 160px;
+	width: 160px;
+	border-radius: 50%;
+	border: 1px dashed #999999;
+padding-top: 5px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 20px;
+}
+.visa-service  img {
+	height: 150px;
+}
+.img-title {
+	color: #ca1d20;
+	margin-bottom: 25px;
+}
+
 @media (min-width: 768px) {
 	.intro-box {
 		background-color: rgba(255, 255, 255,0.6);
@@ -186,7 +219,7 @@ padding: 15px;
   right: -15px;
   bottom: -15px;
 		border-radius: 50%;
-		border: 1px dashed gray;
+		border: 1px dashed #999999;
 	}
 	.intro-box p {
 		max-width: 300px;
