--- a/css/style.css
+++ b/css/style.css
@@ -54,15 +54,14 @@ font-family: 'Roboto', sans-serif;
 	background: #fff;
 }
 /*Button*/
-.btn {
+.btn, .login {
 	padding: 5px 20px;
 }
-.btn-primary {
+.btn-primary , .login {
 	background-color: #c81e1c;
 	color: #fff;
 	border-color: #c81e1c;
 }
-
 
 /*General Styles*/
 a:hover {
@@ -96,6 +95,31 @@ p{
 	margin-right: auto;
 }
 
+.strip-line {
+	width: 8px;
+	height: 8px;
+	margin-top: 30px;
+	margin-left: auto;
+	margin-right: auto;
+	border-radius: 50%;
+	background-color: #d21e1e;
+	position: relative;
+	z-index: 2;
+}
+.about-us .strip-line:before ,
+.visa-service .strip-line:before{
+	height: 150px !important;
+}
+.strip-line:before {
+content: "";	
+	width: 1px;
+	height: 300px;
+	position: absolute;
+	top:8px;
+	left: 3px;
+	z-index: 1;
+	border-left: 1px dashed #999999;
+}
 /*hero*/
 .bg-1 {
 	background-image: url(../img/bg-1.jpg);
@@ -435,4 +459,10 @@ font-size: 0.8em;
 	.intro-box {
 margin-right: auto;
 		}
+}
+
+@media (max-width: 1024px) {
+	.strip-line {
+		display: none;
+	}
 }
