--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,15 @@ padding: 15px;
 	background-color: #d41d1e;
 }
 /* About US*/
+.about-us {
+	background-image: url(../img/bg-2.jpg);
+	background-position: left top;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+.about-us .overlay {
+	background-color: rgba(255,255,255,0.8);
+}
 .content {
 	padding-top: 50px;
 	padding-bottom: 50px;
